<resources>
    <string name="app_name">Notes</string>
    <string name="app_version_label">Version</string>
    <string name="app_description">Take audio notes.</string>
    <string name="app_credits">AJ</string>
    <string name="app_email">allanjos@gmail.com</string>
    <string name="app_homepage">www.olivum.com.br</string>

    <string name="action_settings">Settings</string>
    <string name="Info">Information</string>
    <string name="Settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="Audio_note">Audio note</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">Notes</string>
    <string name="title_activity_config">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="Video_note">Video note</string>
    <string name="Photo_note">Photo note</string>
    <string name="Brief">Brief description</string>
    <string name="Record">Record</string>
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="note_type">Note type</string>
    <string name="Author_">Author:</string>
    <string name="Contact_">Contact:</string>
    <string name="Version_">Version:</string>
    <string name="Close">Close</string>
</resources>