<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_audio_note"
            android:icon="@drawable/ic_mic_black_24px"
            android:title="@string/Audio_note" />
        <item
            android:id="@+id/nav_photo_note"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Photo_note" />
        <item
            android:id="@+id/nav_video_note"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/Video_note" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/Settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/Info" />
        </menu>
    </item>

</menu>
