<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dip">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:text="@string/app_description"/>

    <TextView android:id="@+id/about_credits"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="20dip"
              android:textSize="16sp"
              android:text="@string/app_credits"
              android:autoLink="web"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:autoLink="email"
              android:text="@string/app_email"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:autoLink="web"
              android:text="@string/app_homepage"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingTop="10dp">

      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingRight="3dp"
                android:text="@string/app_version_label"/>

      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/app_version"/>

    </LinearLayout>

</LinearLayout>