<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="0dp"
              android:paddingBottom="0dp"
              android:paddingLeft="0dp"
              android:paddingRight="0dp"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarStyle"
        android:background="@drawable/toolbar"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:stretchColumns="*"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button android:id="@+id/buttonRecord"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center|center_vertical"
                android:layout_gravity="center|center_vertical"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_record"
                android:text="@string/Record"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <Button android:id="@+id/buttonPlay"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center|center_vertical"
                android:layout_gravity="center|center_vertical"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_play"
                android:text="@string/Play"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <EditText android:id="@+id/editTextBrief"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint=""
                  android:inputType="" />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/Brief"
                  android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>